# smith-utils

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/source/: changelog.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: crypto.rst  datetime.rst  file.rst  index.rst  numeric.rst  text.rst
src/smith_utils/: __init__.py
src/smith_utils/crypto/: __init__.py  hashes.py
src/smith_utils/datetime/: __init__.py  date_utils.py
src/smith_utils/file/: __init__.py  classification.py
src/smith_utils/numeric/: __init__.py  refinement.py
src/smith_utils/text/: __init__.py  metrics.py  newlines.py  normalization.py  unicode_char_names.py
tests/: test_date_utils.py  test_file_classification.py  test_hashes.py  test_metrics.py  test_newlines.py  test_normalization.py  test_package_exports.py  test_refinement.py  test_unicode_char_names.py
