[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smith-utils"
version = "0.3.0"
description = "A utility library for data cleaning and parsing."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Eiichi YAMAMOTO", email = "info@yeiichi.com" }
]

keywords = [
  "csv",
  "deduplication",
  "data-filtering",
  "file-organization",
  "filtering",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
docs = [
  "sphinx>=8,<9",
  "furo>=2024.8.6",
]
release = [
  "python-semantic-release>=9,<10",
]

[project.urls]
Homepage = "https://github.com/yeiichi/smith-utils"
Repository = "https://github.com/yeiichi/smith-utils"
Documentation = "https://smith-utils.readthedocs.io/"
Changelog = "https://smith-utils.readthedocs.io/en/latest/changelog.html"

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
allow_zero_version = true
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
